# investment-firm-agents

./: .env.example  .gitignore  .mcp.json  AGENTS.md  QUICK_README.md  README.md  handover.md  planning.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/agents/: fastapi-reviewer.md  llm-cost-auditor.md  provenance-auditor.md  python-reviewer.md  scope-compliance-guard.md  security-reviewer.md  silent-failure-hunter.md  web-ui-tester.md
.claude/skills/add-agent-role/: SKILL.md
.claude/skills/run-offline-tests/: SKILL.md
docs/: ARCHITECTURE.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: probe_gemini_ws.py  probe_live_fixes.py
src/investment_firm/: __init__.py  __main__.py
src/investment_firm/config/: firm.yaml
src/investment_firm/core/: __init__.py  agent.py  consultant.py  debate.py  errors.py  events.py  indicators.py  memory.py  orchestrator.py  planner.py  risk.py  roster.py  schemas.py  technicals.py
src/investment_firm/core/prompts/: __init__.py  analysts.py  base.py  debate.py  economists.py  governance.py  librarian.py  registry.py  risk.py  trading.py
src/investment_firm/core/tools/: __init__.py  base.py  datasources.py  openbb_datasources.py
src/investment_firm/data/: __init__.py  backtest.py  risk.py  technicals.py
src/investment_firm/interfaces/: __init__.py  cli.py
src/investment_firm/interfaces/web/: __init__.py  app.py  market.py  market_data.py  runs.py
src/investment_firm/interfaces/web/static/: app.css  app.js  charts.js  index.html
src/investment_firm/llm/: __init__.py  backends.py  client.py  config.py  costs.py  databricks_backend.py  models.py  sanitize.py  utils.py
tests/: conftest.py  test_altdata_tools.py  test_citations.py  test_client_offline.py  test_consultant.py  test_core_offline.py  test_data_layout.py  test_debate.py  test_errors.py  test_events.py  test_indicators.py  test_llm_backends.py  test_openbb_tools.py  test_prompts.py  test_risk.py  test_roster.py  test_smoke_live.py  test_strategy_backtest.py  test_technicals.py  test_tools_format.py  test_web_backend.py  test_web_market.py  test_web_offline.py  test_web_runs.py
