[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-firm-agents"
version = "0.1.0"
description = "A buy-side investment firm simulated as a team of orchestrated LLM agents (decision-support only)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# M1.5 — free structured/qualitative data providers
data = [
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
]
# M3 — embeddings memory + post-mortem
embed = [
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]
# M3 — HTTP surface
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
# Tests + notebooks
dev = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
investment-firm = "investment_firm.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 'live' tests hit the real AI Playground API and spend tokens. Deselected by default.
# Run them explicitly with:  python -m pytest -m live
addopts = "-m 'not live'"
markers = [
    "live: tests that call the real AI Playground API (spend tokens; opt-in).",
]
